[maven-release-plugin] prepare release valuereporter-agent-0.1

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.valuereporter</groupId>
   <artifactId>valuereporter-agent</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <packaging>jar</packaging>
     <description>javaagent monitoring activities in your application. This information is forwarded to Valuereporter via http.</description>
     
@@ -32,6 +32,7 @@
         <developerConnection>scm:git:ssh://git@github.com/altran/Valuereporter-Agent.git</developerConnection>
         <connection>scm:git:https://github.com/altran/Valuereporter-Agent.git</connection>
         <url>https://github.com/altran/Whydah-SecurityTokenService</url>
+    <tag>valuereporter-agent-0.1</tag>
   </scm>
 
     <repositories>
