--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-classic</artifactId>
           <version>1.1.2</version>
-          <scope>provided</scope>
+          <scope>runtime</scope>
       </dependency>
       <!--
       TEST
