--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 
 
     <properties>
-        <slf4j.version>1.7.7</slf4j.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <jersey.version>2.8</jersey.version>
         <metrics.version>3.0.1</metrics.version>
     </properties>
@@ -119,8 +119,15 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
         </dependency>
-       
-      <!-- Jersey http client -->
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.8.1</version>
+        </dependency>
+
+
+        <!-- Jersey http client -->
       <dependency>
           <artifactId>jersey-client</artifactId>
           <groupId>org.glassfish.jersey.core</groupId>
@@ -138,13 +145,13 @@
           <groupId>org.slf4j</groupId>
           <artifactId>slf4j-api</artifactId>
           <version>${slf4j.version}</version>
-          <scope>provided</scope>
+          <!--<scope>runtime</scope>-->
       </dependency>
       <dependency>
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-classic</artifactId>
-          <version>1.1.2</version>
-          <scope>runtime</scope>
+          <version>1.1.3</version>
+          <!--<scope>runtime</scope>-->
       </dependency>
       <!--
       TEST
