--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,9 @@
     <properties>
         <slf4j.version>1.7.12</slf4j.version>
         <jersey.version>2.8</jersey.version>
-        <metrics.version>3.0.1</metrics.version>
+        <!--<metrics.version>3.0.1</metrics.version>-->
+        <hystrix-core.version>1.4.12</hystrix-core.version>
+        <rxjava_version_requested_by_hystrix-core>1.0.13</rxjava_version_requested_by_hystrix-core>
     </properties>
 
     <build>
@@ -130,7 +132,15 @@
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
-            <version>1.4.11</version>
+            <version>${hystrix-core.version}</version>
+        </dependency>
+
+        <!--Error in dependency mgmt of Hystrix -->
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>${rxjava_version_requested_by_hystrix-core}</version>
+            <scope>compile</scope>
         </dependency>
 
 
