--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 
     <properties>
         <slf4j.version>1.7.12</slf4j.version>
-        <jersey.version>2.8</jersey.version>
+        <!--<jersey.version>2.8</jersey.version>-->
         <!--<metrics.version>3.0.1</metrics.version>-->
         <hystrix-core.version>1.4.12</hystrix-core.version>
         <rxjava_version_requested_by_hystrix-core>1.0.13</rxjava_version_requested_by_hystrix-core>
@@ -151,6 +151,14 @@
             <version>${hystrix-core.version}</version>
         </dependency>
 
+        <!-- Transform classes -->
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.20.0-GA</version>
+        </dependency>
+
+
         <!--Error in dependency mgmt of Hystrix -->
         <dependency>
             <groupId>io.reactivex</groupId>
@@ -160,12 +168,15 @@
         </dependency>
 
 
-        <!-- Jersey http client -->
+        <!-- http client -->
+        <!--
       <dependency>
           <artifactId>jersey-client</artifactId>
           <groupId>org.glassfish.jersey.core</groupId>
           <version>${jersey.version}</version>
+          -->
           <!-- Exclude org.glassfish.hk2.external:aopalliance-repackaged:jar:2.2.0:compile due to overlapping classes with spring-aop -->
+        <!--
           <exclusions>
               <exclusion>
                   <groupId>org.glassfish.hk2.external</groupId>
@@ -173,6 +184,12 @@
               </exclusion>
           </exclusions>
       </dependency>
+      -->
+        <dependency>
+            <groupId>com.github.kevinsawicki</groupId>
+            <artifactId>http-request</artifactId>
+            <version>6.0</version>
+        </dependency>
       
       <dependency>
           <groupId>org.slf4j</groupId>
