--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.valuereporter</groupId>
-  <artifactId>valuereporter-agent</artifactId>
+  <artifactId>vr-valuereporter-agent</artifactId>
   <version>0.10-SNAPSHOT</version>
   <packaging>jar</packaging>
     <description>javaagent monitoring activities in your application. This information is forwarded to Valuereporter via http.</description>
@@ -21,7 +21,7 @@
         </developer>
     </developers>
 
-  <name>valuereporter-agent</name>
+  <name>vr-valuereporter-agent</name>
     <parent>
         <groupId>no.cantara.emi</groupId>
         <artifactId>parent</artifactId>
@@ -29,10 +29,10 @@
     </parent>
 
     <scm>
-        <developerConnection>scm:git:ssh://git@github.com/cantara/Valuereporter-Agent.git</developerConnection>
-        <connection>scm:git:https://github.com/cantara/Valuereporter-Agent.git</connection>
-        <url>https://github.com/cantara/Valuereporter-Agent</url>
-        <tag>valuereporter-agent-0.4</tag>
+        <developerConnection>scm:git:ssh://git@github.com/valuereporter/Valuereporter-Agent.git</developerConnection>
+        <connection>scm:git:https://github.com/valuereporter/Valuereporter-Agent.git</connection>
+        <url>https://github.com/valuereporter/Valuereporter-Agent</url>
+        <tag>vr-valuereporter-agent-0.4</tag>
     </scm>
 
     <repositories>
